--- a/assets/application.scss
+++ b/assets/application.scss
@@ -1,1 +1,29 @@
 // put your styles here
+* {
+    box-sizing: border-box;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    width: 100%;
+    margin: 0;
+}
+header,
+main,
+footer {
+    padding: 1rem;
+}
+main {
+    flex: 1;
+}
+footer {
+    width: 100%;
+    background-color: #339966;
+    text-align: center;
+
+    strong {
+        font-size: 1.5rem;
+        color: #fff;
+    }
+}
